<resources>
    <string name="app_name">Debt Collector</string>
    <string name="image_logo">image_logo</string>
    <string name="debt_collector_caps">DEBT COLLECTOR</string>
    <string name="text_motto">Best debt monitor app.</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_here">Register here.</string>
    <string name="input_your_data">Input Your Data</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="zip_code">Zip Code</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="register_new_account">Register New Account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_numbers">Phone Numbers</string>
    <string name="password">Password</string>
    <string name="re_input_password">Re-input Password</string>
    <string name="next">Next</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="click_here_to_login">Click here to Login</string>
    <string name="lorem_ipsum">lorem ipsum</string>
    <string name="image_other">Image other</string>
    <string name="input_your_text_here">Input your text here</string>
    <string name="send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="left_button">Left Button</string>
    <string name="right_button">Right Button</string>
    <string name="placeholder_one">placeholder one</string>
    <string name="border">border</string>
    <string name="profile_pict">profile pict</string>
    <string name="billy_kaleb">Billy Kaleb</string>
    <string name="rp_20_000">Rp. 20.000</string>
</resources>
