<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="@drawable/linear_shadow"
        android:paddingBottom="1dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@color/colorBlack70" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="bottom"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <View
                    android:layout_width="100dp"
                    android:layout_height="50dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/colorBlack50"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email"
                android:textSize="16sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@color/colorWhite"
            android:contentDescription="@string/border" />

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/profile_pict"
            android:scaleType="center"
            android:src="@drawable/ic_action_person_filled" />

    </FrameLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linear_shadow"
        android:gravity="center"
        android:id="@+id/buttonLogout"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:text="LOGOUT" />

</LinearLayout>
